Style product edit/add page

--- a/src/app/component/admin/manage-product/edit-product/edit-product.component.html
+++ b/src/app/component/admin/manage-product/edit-product/edit-product.component.html
@@ -1,36 +1,43 @@
 <!-- Edit product page -->
 <div class="edit-prod-div" id="edit-prod-div">
 
-    <!-- Page title -->
-    <p class="edit-prod-title" id="eidt-prod-title">Edit Product</p>
 
-    <!-- Product update operation status message -->
-    <div class="update-msg-div" id="update-msg-div">
-        <p *ngIf="isPostSucc">{{postSuccMsg}} <a routerLink="/admin/manage-products">Go Product Admin Page</a></p>
-        <p *ngIf="isImgPostSucc">{{postImgSuccMsg}}</p>
-        <p *ngIf="isPostSucc === false">{{postFailedMsg}}</p>
-        <p *ngIf="isImgPostSucc === false">{{postImgFailedMsg}}</p>
-    </div>
 
     <!-- Form for product -->
-    <form class="prod-form" id="prod-form" (ngSubmit)="editProduct(prodForm)" #prodForm="ngForm">
+    <form class="prod-form mt-5" id="prod-form" (ngSubmit)="editProduct(prodForm)" #prodForm="ngForm">
+    
+                <!-- Page title -->
+        <h3 class="edit-prod-title h3" id="eidt-prod-title">Edit Product</h3>
+    
+        <!-- Product update operation status message -->
+        <div class="update-msg-div alert alert-danger" id="update-msg-div" *ngIf="isPostSucc === false || isImgPostSucc === false">
+            <p *ngIf="isPostSucc === false">{{postFailedMsg}}</p>
+            <p *ngIf="isImgPostSucc === false">{{postImgFailedMsg}}</p>
+        </div>
+
+        <!-- Success message -->
+        <div class="update-msg-succ-div alert alert-success" id="updat-msg-succ-div" *ngIf="isPostSucc || isImgPostSucc">
+            <p *ngIf="isPostSucc">{{postSuccMsg}} <a routerLink="/admin/manage-products">Go Product Admin Page</a></p>
+            <p *ngIf="isImgPostSucc">{{postImgSuccMsg}}</p>
+        </div>
+
         <!-- Prod id -->
-        <label for="prod-id-lb" class="id-lb" id="id-lb">ID {{product.pid}}</label>
+        <label for="prod-id-lb" class="id-lb" id="id-lb"><strong>ID {{product.pid}} </strong> </label>
         <br>
 
         <!-- Prod name -->
         <label for="prod-name" class="prod-name-lb" id="prod-name-lb">Name</label>
-        <input name="name" type="text" class="prod-name-input" id="prod-name-input"  [ngModel]="product.name" required>
+        <input name="name" type="text" class="prod-name-input form-control" id="prod-name-input"  [ngModel]="product.name" required>
         <br>
 
         <!-- Prod Brand -->
         <label for="prod-brand" class="prod-brand-lb" id="prod-brand-lb">Brand</label>
-        <input name="brand" type="text" class="prod-brand-input" id="prod-brand-input" [ngModel]="product.brand" required>
+        <input name="brand" type="text" class="prod-brand-input form-control" id="prod-brand-input" [ngModel]="product.brand" required>
         <br>
 
         <!-- Prod Category -->
         <label for="prod-category" class="prod-category-lb" id="prod-category-lb">Category</label>
-        <select name="category" placeholder="Select Category" id="category-select" class="category-select" [(ngModel)]="categoryId" required>
+        <select name="category" placeholder="Select Category" id="category-select" class="category-select form-select form-select-lg mb-3" [(ngModel)]="categoryId" required>
             <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
         </select>
         <br>
@@ -38,24 +45,24 @@
 
         <!--  Prod Price -->
         <label for="price-category" class="prod-price-lb" id="prod-price-lb">Price</label>
-        <input name="price" type="number" class="prod-price-input" id="prod-price-input" min = 0 [ngModel]="product.price" required>
+        <input name="price" type="number" class="prod-price-input form-control" id="prod-price-input" min = 0 [ngModel]="product.price" required>
         <br>
 
         <!-- Prod qty -->
         <label for="prod-qty" class="prod-qty-lb" id="prod-qty-lb">Qty</label>
-        <input name="qty" type="number" class="prod-qty-input" id="prod-qty-input" min=0 [ngModel]="product.qty" required>
+        <input name="qty" type="number" class="prod-qty-input form-control " id="prod-qty-input" min=0 [ngModel]="product.qty" required>
         <br>
 
         <!-- File upload -->
         <label for="file">Upload Image</label>
-        <input type="file" class="image-upload" id="image-upload" (change)="onFileSelected($event)">
+        <input type="file" class="image-upload form-control form-control-lg " id="image-upload" (change)="onFileSelected($event)">
 
         <!-- disable button -->
-        <button class="prod-submit-btn" id="prod-submit-btn" *ngIf="product.active" (click)="product.active = !product.active">Disable</button>
-        <button class="prod-submit-btn" id="prod-submit-btn" *ngIf="!product.active" (click)="product.active = !product.active">Enable</button>
+        <button class="prod-submit-btn btn btn-danger btn-lg mt-2" id="prod-submit-btn" *ngIf="product.active" (click)="product.active = !product.active">Disable</button>
+        <button class="prod-submit-btn btn btn-success btn-lg mt-2" id="prod-submit-btn" *ngIf="!product.active" (click)="product.active = !product.active">Enable</button>
 
         <!-- Submit button -->
-        <button class="prod-submit-btn" id="prod-submit-btn">Update</button>
+        <button class="prod-submit-btn btn btn-primary btn-lg mt-2" id="prod-submit-btn">Update</button>
 
     </form>
 
