--- a/src/app/component/navigation/navbar/navbar.component.html
+++ b/src/app/component/navigation/navbar/navbar.component.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" routerLink="/admin">Admin</a>
                 </li>
                 
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="isUserLoggedIn()">
                     <a class="nav-link" routerLink="/cart">Cart</a>
                 </li>
 
