Added id to html elements

--- a/src/app/component/view-products/product-item/product-item/product-item.component.html
+++ b/src/app/component/view-products/product-item/product-item/product-item.component.html
@@ -1,11 +1,11 @@
 <div class="card shadow-sm h-100" >
     
-    <div class="card-body ">
+    <div class="card-body " id="prod-item">
         <div class="prod-img" id="prod-img"><a [routerLink]="['/shop/product',product.pid]"><img [src]="image" [alt]="product.name" ></a></div>
         <hr>
-        <strong>{{product.name}}</strong>
+        <strong id="prod-title">{{product.name}}</strong>
         <p class="cart-text text-muted">{{product.brand}}</p>
-        <p class="cart-text text-muted">{{product.category.name}}</p>
+        <p class="cart-text text-muted" id="prod-category">{{product.category.name}}</p>
         <strong > {{product.price | currency }}</strong>
         
         <div class="d-flex justify-content-between align-items-center">
