--- a/src/app/component/view-products/view-products.component.html
+++ b/src/app/component/view-products/view-products.component.html
@@ -33,7 +33,7 @@
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" (click)="oper='category';value=category.name; setTitle(category.name)">
                         <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
-                        {{category.name}}
+                        <label id="category-id">{{category.name}}</label>
                         </a>
                     </li>
                 </ul>
