fixes password input type and logoff text

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -31,7 +31,7 @@
                 password
             </label>
             <div class="login-password" id="login-password">
-                <input type="text" class="login-password-input form-control" id="login-password-input" placeholder="password" name="password" required ngModel>
+                <input type="password" class="login-password-input form-control" id="login-password-input" placeholder="password" name="password" required ngModel>
             </div>
     
             <!-- Login and register button -->
