--- a/src/app/component/navigation/navbar/navbar.component.html
+++ b/src/app/component/navigation/navbar/navbar.component.html
@@ -43,7 +43,7 @@
                 </li>
 
                 <li class="nav-item" *ngIf="isloggedIn()">
-                    <a class="nav-link" id="nav-logoff" routerLink="/logoff" >LogOff</a>
+                    <a class="nav-link" id="nav-logoff" routerLink="/logoff" >Logoff</a>
                 </li>
             </ul>
 
